--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ nav {
     justify-content: space-between;
     background-color: blue;
     padding: 5px 5%;
+    position: sticky;
+    top: 0;
+    z-index: 100;
 }
 .logo {
     width: 160px;
@@ -29,3 +32,109 @@ nav {
     width: 28px;
     margin: 0 15px;
 }
+.nav-right {
+    display: flex;
+    align-items: center;
+}
+.search-box {
+    background-color: #efefef;
+    width: 350px;
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+}
+.search-box input {
+    width: 100%;
+    background: transparent;
+    padding: 10px;
+    outline: none;
+    border: none;   
+}
+.nav-user-icone {
+    margin-left: 20px;
+}
+.nav-user-icone img {
+    width: 40px;
+    border-radius: 50%; 
+    cursor: pointer;
+}
+.online {
+    position: relative;
+}
+.online::after {
+    content: '';
+    width: 7px;
+    height: 7px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: rgb(20,175,20);
+}
+
+/**container**/
+.container {
+    display: flex;
+    justify-content: space-between;
+    padding: 13px 5%;
+}
+.left-sidebar {
+    flex-basis: 25%;
+    position: sticky;
+    top: 70px;
+    align-self: flex-start;
+}
+.right-sidebar {
+    background-color: rgb(220, 243, 247);
+    flex-basis: 25%;
+    position: sticky;
+    top: 70px;
+    align-self: flex-start;
+    height: 100vh;
+}
+.main-content {
+    flex-basis: 47%;
+}
+/*start left-sidebar*/
+.left-sidebar {
+
+}
+.emp-links {
+    border-bottom: 1px solid #cec;
+}
+.emp-links a {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+    color: black;
+    width: fit-content;
+}
+.emp-links a img {
+    margin-right: 15px;
+    width:25px
+}
+.emp-links a:last-child {
+    color: blue;
+}
+.shortcut-links a {
+    text-decoration: none;
+    display: flex;
+    text-align: center;
+    margin-bottom: 30px;
+    color: black;
+    width: fit-content;
+}
+.shortcut-links a img {
+    width: 40px;
+    border-radius: 5px;
+    margin-right: 15px;
+}
+.shortcut-links p {
+    margin: 25px 0;
+    color: grey;
+    font-weight: 500;
+}
+/*End left-sidebar*/
