--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     font-family: 'poppins' sans-serif;
+    box-sizing: border-box;
 }
 body {
     background-color: rgb(241,241,241);
@@ -199,7 +200,7 @@ nav {
     align-items: center;
     margin-bottom: 20px;
 }
-.online-list .online img {
+.online-list .online img { 
     width: 40px;
     border-radius: 50%;
 }
@@ -214,3 +215,70 @@ nav {
     bottom: 5px;
 }
 /*End right sidebar*/
+
+/*Start story gallary*/
+.story-gallary {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+.story-gallary .story {
+    flex-basis: 18%;
+    padding-top: 32%;
+    position: relative;
+    background-image: linear-gradient(transparent,rgb(0,0,0,.5)),url('images/status-1.png');
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+}
+.story img {
+    position: absolute;
+    width: 45px;
+    border-radius: 50%;
+    top: 10px;
+    left: 10px;
+    border: 2px solid blue;
+}
+.story {
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+    text-align: center;
+    color: white;
+    font-size: 14px;
+}
+.story-gallary .s1 {
+    background-image: linear-gradient(transparent,rgb(0,0,0,.5)),url('images/status-1.png');
+}
+.story-gallary .s2 {
+    background-image: linear-gradient(transparent,rgb(0,0,0,.5)),url('images/member-1.png');
+}
+.story-gallary .s3 {
+    background-image: linear-gradient(transparent,rgb(0,0,0,.5)),url('images/member-2.png');
+}
+.story-gallary .s4 {
+    background-image: linear-gradient(transparent,rgb(0,0,0,.5)),url('images/member-3.png');
+}
+.story-gallary .s5 {
+    background-image: linear-gradient(transparent,rgb(0,0,0,.5)),url('images/member-4.png');
+}
+/*End story gallary*/
+
+/*Start write post*/
+.write-post {
+    width: 100%;
+    background-color: white;
+    border-radius: 6px;
+    padding: 20px;
+    color: #626262;
+}
+.user-profile {
+    display: flex;
+    align-items: center;
+}
+.user-profile img {
+    width: 45px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+/*End write post*/
