--- a/style.css
+++ b/style.css
@@ -281,5 +281,50 @@ nav {
     border-radius: 50%;
     margin-right: 10px;
 }
-
+.user-profile p{
+    margin-bottom: -5px;
+    font-weight: 500px;
+    color: #626262;
+}
+.user-profile small {
+    font-size: 12px;
+}
+.post-input {
+    padding-left: 55px;
+    padding-top: 10px;
+}
+.post-input textarea {
+    width: 100%;
+    border: 0;
+    outline: 0;
+    border-bottom: 1px solid #ccc;
+    resize: none; /*hide textarea to expand*/
+}
+.add-post-links {
+    display: flex;
+    margin-top: 10px;
+}
+.add-post-links a {
+    display: flex;
+    align-items: center;
+    columns: #626262;
+    margin-left: 30px;
+    font-size: 12px;
+}
+.add-post-links a img {
+    width: 25px;
+    margin-right: 10px;
+}
+.posting {
+    width: 100%;
+    background: #fff;
+    border-radius: 6px;
+    padding: 20px;
+    color: #626262;
+    margin: 20px 0;
+}
+.posting p {
+    margin-top: 10px;
+    color: black;
+}
 /*End write post*/
